--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <body>
     <img src="favicon.svg" alt="Modern ThreeJS" class="logo" />
     <canvas id="webgl"></canvas>
+    <footer class="footer">
+      Made by
+      <a href="https://github.com/alvarosabu" target="_blank"
+        >Alvaro Saburido</a
+      >
+      with <a href="https://threejs.org/" target="_blank">ThreeJS</a> powered by
+      <a href="https://vitejs.dev/" target="_blank">ViteJS ⚡️</a>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
