chore: updated deps and minor tweaks

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <canvas id="webgl"></canvas>
     <footer class="footer">
       Made by
-      <a href="https://github.com/alvarosabu" target="_blank"
-        >Alvaro Saburido</a
-      >
-      with <a href="https://threejs.org/" target="_blank">ThreeJS</a> powered by
+      <a href="https://github.com/alvarosabu" target="_blank">Alvaro Saburido</a>
+      with <a id="threejs-version" href="https://threejs.org/" target="_blank">ThreeJS</a> powered by
       <a href="https://vitejs.dev/" target="_blank">ViteJS ⚡️</a>
     </footer>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/footer.ts"></script>
   </body>
 </html>
